--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#317EFB" >
   <meta name="description" content="template.">
-  <title>Revel bot</title>
+  <title>ISHAQ MESSILI</title>
   <link rel="apple-touch-icon" href="/example.png">
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/hala.css" />
@@ -70,8 +70,8 @@
   <div class="landing">
     <div class="container">
       <div class="text">
-        <h1>Revel</h1>
-        <p>revel es un bot multipropósito diseñado para proteger y entretener tu servidor.</p>
+        <h1>TECNOLOGUIA Y</h1>
+        <p>DIGITALIZACION.</p>
       </div>
       <div class="image">
         <img src="imgs/landing-image.png" alt="">
@@ -81,206 +81,8 @@
       <i class="fas fa-angle-double-down fa-2x"></i>
     </a>
   </div>
-  <!-- End Landing -->
- 
-  <!-- Start Gallery -->
-  
-  
-  
-  <!-- End Gallery -->
-  <!-- Start Features -->
-  <div class="features" id="features">
-    <h2 class="main-title">Features</h2>
-    <div class="container">
-      <!-- BOX 1 -->
-      <div class="box quality">
-        <div class="img-hold">
-          <img src="imgs/features-01.png" alt="">
-        </div>
-        <h2>Security</h2>
-        <p>We have one of the best Securitys to prevent Raids on discord.</p>
-        <a href="#">Home</a>
-      </div>
-      <!-- BOX 2 -->
-      <div class="box time">
-        <div class="img-hold">
-          <img src="imgs/features-02.jpg" alt="">
-        </div>
-        <h2>General CMD</h2>
-        <p>We have a lot of general commands for everyone to try!</p>
-        <a href="#">Home</a>
-      </div>
-      <!-- BOX 3 -->
-      <div class="box passion">
-        <div class="img-hold">
-          <img src="imgs/features-03.jpg" alt="">
-        </div>
-        <h2>Staff Services</h2>
-        <p>Our staff services are fast an 24/7 you can ask questions or report bugs on discord!</p>
-        <a href="#">Discord</a>
-      </div>
-    </div>
-  </div>
-  <!-- End Features -->
-  <!-- Start Testimonials -->
-  
-  
-  
-  <!-- End Testimonials -->
-  <!-- Start Team Members  -->
-  <div class="team" id="team">
-    <h3 class="main-title">Team Members</h3>
-    <div class="container">
-      <!-- BOX 1 -->
-      <div class="box">
-        <div class="data">
-          <img src="imgs/team-01.png" alt="">
-          <div class="social">
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </div>
-        </div>
-        <div class="info">
-          <h3>Tightt (Manager)</h3>
-          <p>Hi! im Tightt i manage the web and i add new updates to
-		  The Bot!
-		  </p>
-        </div>
-      </div>
-      <!-- BOX 2 -->
-      <div class="box">
-        <div class="data">
-          <img src="imgs/team-02.png" alt="">
-          <div class="social">
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </div>
-        </div>
-        <div class="info">
-          <h3>Doxiado (Owner)</h3>
-          <p>Im Doxiado the main owner of revel</p>
-        </div>
-      </div>
-      <!-- BOX 3 -->
-      <div class="box">
-        <div class="data">
-          <img src="imgs/team-03.png" alt="">
-          <div class="social">
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </div>
-        </div>
-        <div class="info">
-          <h3>Nova (Dev)</h3>
-          <p>Hi, im the developer </p>
-        </div>
-      </div>
-      <!-- BOX 4 -->
-      <div class="box">
-        <div class="data">
-          <img src="imgs/notdraco.png" alt="">
-          <div class="social">
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </div>
-        </div>
-        <div class="info">
-          <h3>notdraco47 (STAFF)</h3>
-          <p>Hi i am a Staff i help people and respond to tickets  </p>
-        </div>
-      </div>
-      <!-- BOX 5 -->
-      <div class="box">
-        <div class="data">
-          <img src="imgs/isak.png" alt="">
-          <div class="social">
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </div>
-        </div>
-        <div class="info">
-          <h3>isaacx5757 (STAFF)</h3>
-          <p>Hi i am a Staff i help people and respond to tickets</p>
-        </div>
-      </div>
-      <!-- BOX 6 -->
-      <div class="box">
-        <div class="data">
-          <img src="imgs/dm.png" alt="">
-          <div class="social">
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </div>
-        </div>
-        <div class="info">
-          <h3>.tyoudm (Dev)</h3>
-          <p>Hi i am a Developer and im the main owner of @Tumb </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="spikes"></div>
-  <!-- End Team Members -->
+
+  <!-- End Testimonials --
 
   <!-- Start our-skills -->
   <div class="our-skills" id="our-skills">
