--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <!-- Start our-skills -->
   <div class="our-skills" id="our-skills">
-    <h3 class="main-title">Our Skills</h3>
+    <h3 class="main-title">Personal</h3>
     <div class="container">
       <img src="imgs/skills.png" alt="">
       <div class="skills">
@@ -122,165 +122,13 @@
     </div>
   </div>
   <!-- End our-skills -->
-  <!-- Start Our Works -->
-  <div class="work-steps" id="work-steps">
-    <h3 class="main-title">New Updates 12/10/2024</h3>
-    <div class="container">
-      <img src="imgs/work-steps.png" alt="" class="image">
-      <div class="info">
-        <!-- BOX 1 -->
-        <div class="box">
-          <img src="imgs/work-steps-1.png" alt="">
-          <div class="text">
-            <h3>New Commands</h3>
-            <p>[+] botinfo cmd</p>
-              </p>[+] boostbadges cmd</p>
-              </p> [+] legacybadges cmd </p>
-          </div>
-        </div>
-        <!-- BOX 2 -->
-        <div class="box">
-          <img src="imgs/work-steps-2.png" alt="">
-          <div class="text">
-            <h3>Bugs Fix</h3>
-            <p>[%] We fixed some issues in @revel 
-             
-             </p>
-          </div>
-        </div>
-        <!-- BOX 3 -->
-        <div class="box">
-          <img src="imgs/work-steps-3.png" alt="">
-          <div class="text">
-            <h3>Security</h3>
-            <p> [+] We added a better Security
-              </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End Our Works -->
  
-  <!--PRICING PLANS -->
-  <div class="pricing " id="pricing">
-    <div class="dots dots-up"></div>
-    <div class="dots dots-down"></div>
-    <h3 class="main-title">Revel Premium (Coming soon)</h3>
-    <div class="container center">
-      <!-- BOX  -->
-      <div class="box">
-        <h3 class="title">Basic</h3>
-        <img src="imgs/hosting-basic.png" alt="">
-        <div class="price">
-          <span class="amount">$3.50</span>
-          <span class="time">Per Month </span>
-        </div>
-        <ul>
-          <li>30+ Custom comands</li>
-          <li>Basic Support</li>
-        </ul>
-        <a href="#">Choose Plan</a>
-      </div>
-      <!-- BOX  2 Advanced-->
-      <div class="box popular">
-        <div class="lable">Most Popular</div>
-        <h3 class="title">Advanced</h3>
-        <img src="imgs/hosting-advanced.png" alt="">
-        <div class="price">
-          <span class="amount">$5</span>
-          <span class="time">Per Month </span>
-        </div>
-        <ul>
-          <li>50+ Custom commands</li>
-          <li> Best antinuke</li>
-          <li>Best Automod</li>
-          <li>Advanced Support</li>
-        </ul>
-        <a href="#">Choose Plan</a>
-      </div>
-      <!-- BOX 3 Professional-->
-      <div class="box">
-        <h3 class="title">Professional</h3>
-        <img src="imgs/hosting-professional.png" alt="">
-        <div class="price">
-          <span class="amount">$10</span>
-          <span class="time">Per Month </span>
-        </div>
-        <ul>
-          <li>Your Custom Commands</li>
-          <li> AntiNuke Premium</li>
-          <li>Best automod</li>
-          <li>Antispam and more..</li>
-          <li>Professional Support</li>
-        </ul>
-        <a href="#">Choose Plan</a>
-      </div>
-    </div>
-  </div>
-  <!--PRICING PLANS -->
-  <!-- Start TOP VIDEOS -->
-  <div class="video" id="video">
-    <h3 class="main-title">Tutorial Revel</h3>
-    <div class="container">
-      <div class="holder">
-        <div class="list">
-          <div class="name">
-            Tutorial
-            <i class="fas fa-random"></i>
-          </div>
-          <ul>
-          </ul>
-        </div>
-        <div class="preview">
-          <img src="imgs/video-preview.jpg" alt="">
-          <div class="info">An easy tutorial about revel</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End TOP VIDEOS -->
-  <!-- Start Stats -->
-  <div class="stats" id="stats">
-    <h2>Revel Stadistics 💕</h2>
-    <div class="container">
-      <!-- BOX 1 -->
-      <div class="box">
-        <i class="far fa-user fa-2x fa-fw"></i>
-        <span class="number">1472</span>
-        <span class="text">members</span>
-      </div>
-      <!-- BOX 2 -->
-      <div class="box">
-        <i class="fas fa-code fa-2x fa-fw"></i>
-        <span class="number">v0.54</span>
-        <span class="text">version</span>
-      </div>
-      <!-- BOX 3-->
-      <div class="box">
-        <i class="fas fa-globe-asia fa-2x fa-fw"></i>
-        <span class="number">+50</span>
-        <span class="text">Guilds!</span>
-      </div>
-      <!-- BOX 4 -->
-      <div class="box">
-        <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
-        <span class="number">0%</span>
-        <span class="text">Money Goal</span>
-      </div>
-
-    </div>
-  </div>
-  <div class="center">
-
-  </div>
-  <!-- End Stats -->
   <!-- Start Footer -->
   <div class="footer">
     <div class="container">
       <!-- BOX 1 -->
       <div class="box">
-        <h3>Revel</h3>
+        <h3>Paguina Web Ishaq</h3>
         <ul class="social">
           <li><a href="https://www.facebook.com/profile.php?id=100004813780516" class="facebook">
               <i class="fab fa-facebook-f"></i>
@@ -290,17 +138,15 @@
               <i class="fab fa-youtube"></i>
           </a>
         </ul>
-        <p class="text">Revel the best bot of discord MIT LICENSE ©
+        <p class="text">
         </p>
       </div>
       <!-- BOX 2 -->
       <div class="box">
         <ul class="links">
-          <li><a href="#">Feauters</a> </li>
-          <li><a href="#">Team Members</a></li>
-          <li><a href="#">Our Skills</a></li>
-          <li><a href="#">Updates</a></li>
-          <li><a href="#">Revel Stadistics</a></li>
+          <li><a href="#">Inicio</a> </li>
+          <li><a href="#">Taller</a></li>
+          <li><a href="#">Personal</a></li>
         </ul>
       </div>
       <!-- BOX 3 -->
@@ -308,24 +154,24 @@
         <!-- LINE lucation -->
         <div class="line">
           <i class="fas fa-map-marker-alt fa-fw"></i>
-          <div class="info">Im in your house</div>
+          <div class="info">Zaragoza, España</div>
         </div>
         <!-- LINE Hours -->
         <div class="line">
           <i class="far fa-clock fa-fw"></i>
-          <div class="info">The bot is Online Now!</div>
+          <div class="info">12:40</div>
         </div>
         <!-- LINE Mobile -->
         <div class="line">
           <i class="fas fa-phone-volume fa-fw"></i>
           <div class="info">
             <span>66666666666</span>
-            <span>911</span>
+            <span></span></span>
           </div>
         </div>
       </div>
     </div>
-    <p class="copyright">Made With <i class="fas fa-heart fa-fw fa-1x"></i>  By Revel services ©</p>
+    <p class="copyright">Hecho por Ishaq Messili ©</p>
   </div>
   <!-- End Footer -->
 
