--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   <!-- Start Header -->
   <div class="header" id="#header">
     <div class="container">
-      <a href="#" class="logo">Revel Services</a>
+      <a href="#" class="logo">Ishaq Messili 2°D</a>
       <ul class="mainmenu">
-        <li><a href="#features">Feauters</a></li>
-        <li><a href="#team">Team Members</a></li>
-        <li><a href="#work-steps">Updates</a></li>
-        <li><a href="#">More info</a>
+        <li><a href="#features">Inicio</a></li>
+        <li><a href="#team">Taller</a></li>
+        <li><a href="#our-skills">Personal</a></li>
+        <li><a href="#">Mas Info</a>
           <!-- Start Megamenu -->
           <div class="megamenu">
             <div class="image">
