--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p>DIGITALIZACION.</p>
       </div>
       <div class="image">
-        <img src="imgs/landing-image.png" alt="">
+        <img src="imgs/Tecnologuia.png" alt="">
       </div>
     </div>
     <a href="#articles" class="go-down">
