--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en, eu">
 
-<link rel="icon" type="image/png" href="./img/revel.png">
+<link rel="icon" type="image/png" href="./img/tecno.jpg">
 	
 <head>
   <meta charset="UTF-8" />
@@ -35,7 +35,7 @@
           <!-- Start Megamenu -->
           <div class="megamenu">
             <div class="image">
-              <img src="imgs/revel.png" alt="">
+              <img src="imgs/tecno.jpg" alt="">
             </div>
             <ul class="links">
               <li>
@@ -74,7 +74,7 @@
         <p>DIGITALIZACION.</p>
       </div>
       <div class="image">
-        <img src="imgs/Tecno.jpg" alt="">
+        <img src="imgs/tecno.jpg" alt="">
       </div>
     </div>
     <a href="#articles" class="go-down">
