--- a/index.html
+++ b/index.html
@@ -39,23 +39,16 @@
             </div>
             <ul class="links">
               <li>
-                <a href="#testimonials"><i class="far fa-comments fa-fw"></i> Partners</a>
+                <a href="#testimonials"><i class="far fa-comments fa-fw"></i> Inicio</a>
               </li>
               <li>
-                <a href="#team"><i class="far fa-user fa-fw"></i> Team Members</a>
+                <a href="#team"><i class="far fa-user fa-fw"></i> Fotos</a>
               <li>
-                <a href="#our-skills"><i class="far fa-check-circle fa-fw"></i> Our Skills</a>
-              </li>
-              <li>
-                <a href="#work-steps"><i class="far fa-clipboard fa-fw"></i> New Updates</a>
+                <a href="#our-skills"><i class="far fa-check-circle fa-fw"></i> Personal</a>
               </li>
             </ul>
             <ul class="links">
               <li>
-                <a href="#events"><i class="far fa-calendar-alt fa-fw"></i> Events (Soon)</a>
-              </li>
-              <li>
-                <a href="#pricing"><i class="fas fa-server fa-fw"></i> Revel Premium</a>
               </li>
             </ul>
           </div>
