--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <img src="imgs/tecno-removebg-preview.png" alt="">
       </div>
     </div>
-    <a href="#articles" class="go-down">
+    <a href="#our-skills" class="go-down">
       <i class="fas fa-angle-double-down fa-2x"></i>
     </a>
   </div>
