--- a/index.html
+++ b/index.html
@@ -115,7 +115,52 @@
     </div>
   </div>
   <!-- End our-skills -->
- 
+
+<div class="gallery " id="gallery">
+    <h2 class="main-title"> Gallery</h2>
+    <div class="container">
+      <!-- BOX 1 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-01.png" alt="">
+        </div>
+      </div>
+      <!-- BOX 2 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-02.png" alt="">
+        </div>
+      </div>
+      <!-- BOX 3 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-03.jpg" alt="">
+
+        </div>
+      </div>
+      <!-- BOX 4 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-04.png" alt="">
+        </div>
+      </div>
+      <!-- BOX 5 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-05.jpg" alt="">
+        </div>
+      </div>
+      <!-- BOX 6 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-06.png" alt="">
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+	
   <!-- Start Footer -->
   <div class="footer">
     <div class="container">
