--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="#" class="logo">Ishaq Messili 2°D</a>
       <ul class="mainmenu">
         <li><a href="#features">Inicio</a></li>
-        <li><a href="#team">Taller</a></li>
+        <li><a href="#gallery">Taller</a></li>
         <li><a href="#our-skills">Personal</a></li>
         <li><a href="#">Mas Info</a>
           <!-- Start Megamenu -->
@@ -106,9 +106,9 @@
         </div>
         <!-- SKILL 4-->
         <div class="skill">
-          <h3>Python<span>60%</span></h3>
+          <h3>Python<span>100%</span></h3>
           <div class="progress">
-            <span style="width : 60% ;"></span>
+            <span style="width : 100% ;"></span>
           </div>
         </div>
       </div>
@@ -116,8 +116,8 @@
   </div>
   <!-- End our-skills -->
 
-<div class="gallery " id="gallery">
-    <h2 class="main-title"> Gallery</h2>
+<div class="Taller " id="gallery">
+    <h2 class="main-title"> Taller</h2>
     <div class="container">
       <!-- BOX 1 -->
       <div class="box">
