--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </div>
   <!-- End our-skills -->
 
-<div class="Taller " id="gallery">
+<div class="gallery " id="gallery">
     <h2 class="main-title"> Taller</h2>
     <div class="container">
       <!-- BOX 1 -->
