--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@
     </div>
   </div>
   <!-- End our-skills -->
-
+	
+ <div class="our-skills" id="Video">
+    <h3 class="main-title">Videos</h3>
+    <div class="container">
+      <img src="https://www.youtube.com/shorts/PvmUD6QIWB8" alt="">
+      <div class="skills">
+	
 <div class="gallery " id="gallery">
     <h2 class="main-title"> Taller</h2>
     <div class="container">
