--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
               </li>
             </ul>
           </div>
-
           <!-- End Megamenu -->
         </li>
       </ul>
     </div>
   </div>
   <!-- End Header -->
+
   <!-- Start Landing -->
   <div class="landing">
     <div class="container">
       <div class="text">
-        <h1>TECNOLOGUIA Y</h1>
+        <h1>TECNOLOGIA Y</h1>
         <p>DIGITALIZACION.</p>
       </div>
       <div class="image">
@@ -74,8 +74,28 @@
       <i class="fas fa-angle-double-down fa-2x"></i>
     </a>
   </div>
+  <!-- End Landing -->
 
-  <!-- End Testimonials --
+  <!-- Start Videos -->
+  <div class="videos" id="videos">
+    <h3 class="main-title">Videos</h3>
+    <div class="container">
+      <!-- Video 1 -->
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" 
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+          encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <!-- Video 2 -->
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" 
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+          encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <!-- Add more videos as needed -->
+    </div>
+  </div>
+  <!-- End Videos -->
 
   <!-- Start our-skills -->
   <div class="our-skills" id="our-skills">
@@ -104,7 +124,7 @@
             <span style="width: 70%;"></span>
           </div>
         </div>
-        <!-- SKILL 4-->
+        <!-- SKILL 4 -->
         <div class="skill">
           <h3>Python<span>100%</span></h3>
           <div class="progress">
@@ -115,15 +135,9 @@
     </div>
   </div>
   <!-- End our-skills -->
-	
- <div class="our-skills" id="Video">
-    <h3 class="main-title">Videos</h3>
-    <div class="container">
-      <img src="https://www.youtube.com/shorts/PvmUD6QIWB8" alt="">
-      <div class="skills">
-	
-<div class="gallery " id="gallery">
-    <h2 class="main-title"> Taller</h2>
+
+  <div class="gallery" id="gallery">
+    <h2 class="main-title">Taller</h2>
     <div class="container">
       <!-- BOX 1 -->
       <div class="box">
@@ -141,7 +155,6 @@
       <div class="box">
         <div class="image">
           <img src="imgs/gallery-03.jpg" alt="">
-
         </div>
       </div>
       <!-- BOX 4 -->
@@ -162,17 +175,15 @@
           <img src="imgs/gallery-06.png" alt="">
         </div>
       </div>
-
-
     </div>
   </div>
-	
+
   <!-- Start Footer -->
   <div class="footer">
     <div class="container">
       <!-- BOX 1 -->
       <div class="box">
-        <h3>Paguina Web Ishaq</h3>
+        <h3>Página Web Ishaq</h3>
         <ul class="social">
           <li><a href="https://www.facebook.com/profile.php?id=100004813780516" class="facebook">
               <i class="fab fa-facebook-f"></i>
@@ -182,20 +193,18 @@
               <i class="fab fa-youtube"></i>
           </a>
         </ul>
-        <p class="text">
-        </p>
       </div>
       <!-- BOX 2 -->
       <div class="box">
         <ul class="links">
-          <li><a href="#">Inicio</a> </li>
+          <li><a href="#">Inicio</a></li>
           <li><a href="#">Taller</a></li>
           <li><a href="#">Personal</a></li>
         </ul>
       </div>
       <!-- BOX 3 -->
       <div class="box">
-        <!-- LINE lucation -->
+        <!-- LINE Location -->
         <div class="line">
           <i class="fas fa-map-marker-alt fa-fw"></i>
           <div class="info">Zaragoza, España</div>
@@ -210,7 +219,6 @@
           <i class="fas fa-phone-volume fa-fw"></i>
           <div class="info">
             <span>66666666666</span>
-            <span></span></span>
           </div>
         </div>
       </div>
