--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
+  <style>
+    .videos .video {
+      display: inline-block;
+      margin: 10px;
+      border: 5px solid white;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .videos iframe {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+
+    .videos .container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+  </style>
 </head>
 
 <body>
@@ -218,15 +238,14 @@
         <div class="line">
           <i class="fas fa-phone-volume fa-fw"></i>
           <div class="info">
-            <span>66666666666</span>
+            <span>+34 622 40 59 13</span>
+            <span>+34 652 98 63 14</span>
           </div>
         </div>
       </div>
     </div>
-    <p class="copyright">Hecho por Ishaq Messili ©</p>
   </div>
   <!-- End Footer -->
-
 </body>
 
 </html>
