--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     .videos .video {
       display: inline-block;
       margin: 10px;
-      border: 5px solid white;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Sombra suave */
     }
 
     .videos iframe {
@@ -102,7 +101,7 @@
     <div class="container">
       <!-- Video 1 -->
       <div class="video">
-        <iframe width="300" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" 
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
           encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
