--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
       <div class="box">
         <ul class="links">
           <li><a href="#">Inicio</a></li>
-          <li><a href="#">Taller</a></li>
-          <li><a href="#">Personal</a></li>
+          <li><a href="#gallery">Taller</a></li>
+          <li><a href="#our-skills">Personal</a></li>
         </ul>
       </div>
       <!-- BOX 3 -->
