--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#317EFB" >
+  <meta name="theme-color" content="#FFAA00" >
   <meta name="description" content="template.">
   <title>ISHAQ MESSILI</title>
   <link rel="apple-touch-icon" href="/example.png">
