--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="container">
       <!-- Video 1 -->
       <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ekO0koy130M" 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ekO0koy130M" 
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
           encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
