--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en, eu">
 
 <link rel="icon" type="image/png" href="./img/tecno-removebg-preview.png">
-	
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#FFAA00" >
+  <meta name="theme-color" content="#FFAA00">
   <meta name="description" content="template.">
   <title>ISHAQ MESSILI</title>
   <link rel="apple-touch-icon" href="/example.png">
@@ -18,8 +18,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <style>
     .videos .video {
       display: inline-block;
@@ -61,12 +60,9 @@
               </li>
               <li>
                 <a href="#team"><i class="far fa-user fa-fw"></i> Fotos</a>
+              </li>
               <li>
                 <a href="#our-skills"><i class="far fa-check-circle fa-fw"></i> Personal</a>
-              </li>
-            </ul>
-            <ul class="links">
-              <li>
               </li>
             </ul>
           </div>
@@ -110,49 +106,21 @@
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
           encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <!-- Add more videos as needed -->
-    </div>
-  </div>
-  <!-- End Videos -->
-
-  <!-- Start our-skills -->
-  <div class="our-skills" id="our-skills">
-    <h3 class="main-title">Personal</h3>
-    <div class="container">
-      <img src="imgs/skills.png" alt="">
-      <div class="skills">
-        <!-- SKILL 1 -->
-        <div class="skill">
-          <h3>HTML <span>90%</span></h3>
-          <div class="progress">
-            <span style="width: 90%;"></span>
-          </div>
-        </div>
-        <!-- SKILL 2 -->
-        <div class="skill">
-          <h3>CSS <span>85%</span></h3>
-          <div class="progress">
-            <span style="width: 85%;"></span>
-          </div>
-        </div>
-        <!-- SKILL 3 -->
-        <div class="skill">
-          <h3>JavaScript <span>70%</span></h3>
-          <div class="progress">
-            <span style="width: 70%;"></span>
-          </div>
-        </div>
-        <!-- SKILL 4 -->
-        <div class="skill">
-          <h3>Python<span>100%</span></h3>
-          <div class="progress">
-            <span style="width : 100% ;"></span>
-          </div>
-        </div>
+      <!-- Video 3 -->
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_3" 
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+          encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <!-- Video 4 -->
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_4" 
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+          encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div>
-  <!-- End our-skills -->
+  <!-- End Videos -->
 
   <div class="gallery" id="gallery">
     <h2 class="main-title">Taller</h2>
@@ -205,11 +173,13 @@
         <ul class="social">
           <li><a href="https://www.facebook.com/profile.php?id=100004813780516" class="facebook">
               <i class="fab fa-facebook-f"></i>
+          </a></li>
           <li><a href="https://twitter.com/HlOol_XD" class="twitter">
               <i class="fab fa-twitter"></i>
+          </a></li>
           <li><a href="#" class="youtube">
               <i class="fab fa-youtube"></i>
-          </a>
+          </a></li>
         </ul>
       </div>
       <!-- BOX 2 -->
