--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
               <li>
                 <a href="#team"><i class="far fa-user fa-fw"></i> Fotos</a>
               </li>
-              <li>
-                <a href="#our-skills"><i class="far fa-check-circle fa-fw"></i> Personal</a>
-              </li>
             </ul>
           </div>
           <!-- End Megamenu -->
@@ -90,9 +87,9 @@
   </div>
   <!-- End Landing -->
 
-  <!-- Start Videos -->
-  <div class="videos" id="videos">
-    <h3 class="main-title">Videos</h3>
+  <!-- Start Personal -->
+  <div class="our-skills" id="our-skills">
+    <h3 class="main-title">Personal</h3>
     <div class="container">
       <!-- Video 1 -->
       <div class="video">
@@ -120,7 +117,7 @@
       </div>
     </div>
   </div>
-  <!-- End Videos -->
+  <!-- End Personal -->
 
   <div class="gallery" id="gallery">
     <h2 class="main-title">Taller</h2>
