--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     .videos .video {
       display: inline-block;
       margin: 10px;
+      width: 200px; /* Ancho ajustado para videos pequeños */
     }
 
     .videos iframe {
       display: block;
       width: 100%;
-      height: auto;
+      height: 112px; /* Altura ajustada para videos pequeños */
     }
 
     .videos .container {
@@ -90,28 +91,28 @@
   <!-- Start Personal -->
   <div class="our-skills" id="our-skills">
     <h3 class="main-title">Personal</h3>
-    <div class="container">
+    <div class="container videos">
       <!-- Video 1 -->
       <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ekO0koy130M" 
+        <iframe src="https://www.youtube.com/embed/ekO0koy130M" 
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
           encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <!-- Video 2 -->
       <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" 
+        <iframe src="https://www.youtube.com/embed/ekO0koy130M" 
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
           encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <!-- Video 3 -->
       <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_3" 
+        <iframe src="https://www.youtube.com/embed/ekO0koy130M" 
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
           encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <!-- Video 4 -->
       <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_4" 
+        <iframe src="https://www.youtube.com/embed/ekO0koy130M" 
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
           encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
