--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     }
 
     .video-four {
-      margin-top: 20px;
+      display: block;
+      margin: 20px auto; /* Centrar el video 4 */
+      width: 150px; /* Ancho ajustado para videos pequeños */
     }
   </style>
 </head>
