--- a/index.html
+++ b/index.html
@@ -95,30 +95,40 @@
   <div class="our-skills" id="our-skills">
     <h3 class="main-title">Personal</h3>
     <div class="container videos">
-      <!-- Video 1 -->
-      <div class="video">
-        <iframe src="https://www.youtube.com/embed/ekO0koy130M" 
-          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-          encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-01.png" alt="">
+        </div>
       </div>
-      <!-- Video 2 -->
-      <div class="video">
-        <iframe src="https://www.youtube.com/embed/ekO0koy130M" 
-          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-          encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <!-- BOX 2 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-02.png" alt="">
+        </div>
       </div>
-      <!-- Video 3 -->
-      <div class="video">
-        <iframe src="https://www.youtube.com/embed/ekO0koy130M" 
-          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-          encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <!-- BOX 3 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-03.jpg" alt="">
+        </div>
       </div>
-    </div>
-    <!-- Video 4 centrado -->
-    <div class="video video-four">
-      <iframe src="https://www.youtube.com/embed/ekO0koy130M" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-        encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <!-- BOX 4 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-04.png" alt="">
+        </div>
+      </div>
+      <!-- BOX 5 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-05.jpg" alt="">
+        </div>
+      </div>
+      <!-- BOX 6 -->
+      <div class="box">
+        <div class="image">
+          <img src="imgs/gallery-06.png" alt="">
+      </div>
     </div>
   </div>
   <!-- End Personal -->
