--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       <div class="box">
         <div class="image">
           <img src="imgs/gallery-06.png" alt="">
+        </div>
       </div>
     </div>
   </div>
