--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
   <!-- End Landing -->
 
   <!-- Start Personal -->
-  <div class="our-skills" id="our-skills">
-    <h3 class="main-title">Personal</h3>
-    <div class="container videos">
-   <div class="box">
+  <div class="gallery" id="our-skills">
+    <h2 class="main-title">Taller</h2>
+    <div class="container">
+      <!-- BOX 1 -->
+      <div class="box">
         <div class="image">
           <img src="imgs/gallery-01.png" alt="">
         </div>
