--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
   <!-- Start Personal -->
   <div class="gallery" id="our-skills">
-    <h2 class="main-title">Taller</h2>
+    <h2 class="main-title">Personal</h2>
     <div class="container">
       <!-- BOX 1 -->
       <div class="box">
