--- a/index.html
+++ b/index.html
@@ -92,31 +92,37 @@
   <!-- End Landing -->
 
   <!-- Start Personal -->
-  <div class="gallery" id="our-skills">
-    <h2 class="main-title">Personal</h2>
-    <div class="container">
-      <!-- BOX 1 -->
-      <div class="box">
-        <div class="image">
-          <img src="imgs/gallery-01.png" alt="">
-        </div>
+<div class="gallery" id="our-skills">
+  <h2 class="main-title">Personal</h2>
+  <div class="container">
+    <!-- BOX 1 -->
+    <div class="box">
+      <div class="video">
+        <a href="URL_DEL_VIDEO_1" target="_blank">
+          Ver Video 1
+        </a>
       </div>
-      <!-- BOX 2 -->
-      <div class="box">
-        <div class="image">
-          <img src="imgs/gallery-02.png" alt="">
-        </div>
+    </div>
+    <!-- BOX 2 -->
+    <div class="box">
+      <div class="video">
+        <a href="URL_DEL_VIDEO_2" target="_blank">
+          Ver Video 2
+        </a>
       </div>
-      <!-- BOX 3 -->
-      <div class="box">
-        <div class="image">
-          <img src="imgs/gallery-03.jpg" alt="">
-        </div>
-        </div>
+    </div>
+    <!-- BOX 3 -->
+    <div class="box">
+      <div class="video">
+        <a href="URL_DEL_VIDEO_3" target="_blank">
+          Ver Video 3
+        </a>
       </div>
     </div>
   </div>
-  <!-- End Personal -->
+</div>
+<!-- End Personal -->
+
 
   <div class="gallery" id="gallery">
     <h2 class="main-title">Taller</h2>
