--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <!-- BOX 1 -->
     <div class="box">
       <div class="video">
-        <a href="URL_DEL_VIDEO_1" target="_blank">
+        <a href="https://www.youtube.com/watch?v=48lhqX3jpKY" target="_blank">
           Ver Video 1
         </a>
       </div>
@@ -106,7 +106,7 @@
     <!-- BOX 2 -->
     <div class="box">
       <div class="video">
-        <a href="URL_DEL_VIDEO_2" target="_blank">
+        <a href="https://www.youtube.com/watch?v=48lhqX3jpKY" target="_blank">
           Ver Video 2
         </a>
       </div>
@@ -114,7 +114,7 @@
     <!-- BOX 3 -->
     <div class="box">
       <div class="video">
-        <a href="URL_DEL_VIDEO_3" target="_blank">
+        <a href="https://www.youtube.com/watch?v=48lhqX3jpKY" target="_blank">
           Ver Video 3
         </a>
       </div>
